--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Flask-Migrate==4.0.5
 # blinker==1.7.0
 # click==8.1.7
 # colorama==0.4.6
@@ -19,7 +20,7 @@
 
 
 
-
+Flask-Migrate
 blinker
 click
 colorama
@@ -37,3 +38,4 @@ python-dotenv
 SQLAlchemy
 typing_extensions
 Werkzeug
+
